# esp

./: .gitignore  CONTROL_METHODS.md  ESP32开发环境使用说明.md  bluetooth_led_controller.py  build_ai_assistant.sh  build_c3.sh  build_servo.sh  esp32开发方式.md  led_controller.py  mqtt_led_controller.py  serial_led_controller.py  tcp_led_controller.py  udp_led_controller.py  控制方式.md
idf/projects/esp32/: ESP32开发板系列资料、学习视频等链接.txt
idf/projects/esp32-c3/ai_assistant/: CMakeLists.txt  README.md  sdkconfig.defaults
idf/projects/esp32-c3/led_blink/: verify_project.sh
idf/projects/esp32-c3/ml307r_4g_hotspot_c3/: ESP32_S3_ANALYSIS.md  REALISTIC_SOLUTIONS.md  esp32_s3_4g_hotspot.c  sdkconfig.defaults  sdkconfig.old
idf/projects/esp32-c3/neopixel_clock/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build_c3.sh  sdkconfig.defaults
idf/projects/esp32-c3/nrf24l01_controller/: README.md  sdkconfig
idf/projects/esp32-c3/servo_control/: README.md  sdkconfig
idf/projects/esp32-c3/wifi_led_web_controller/: CMakeLists.txt  build_c3.sh  sdkconfig
idf/projects/esp32-s3/audio_speaker/: CMakeLists.txt  README.md  build_s3.sh  partitions.csv  sdkconfig  sdkconfig.defaults
idf/projects/esp32-s3/audio_speaker/main/: CMakeLists.txt  audio_player.c  idf_component.yml  main.c  wifi_audio.c
idf/projects/esp32-s3/audio_speaker/main/include/: audio_player.h  wifi_audio.h
idf/projects/esp32-s3/esp32s3_4g_camera/: CMakeLists.txt  QUICKSTART.md  README.md
idf/projects/esp32-s3/esp32s3_4g_camera/main/: CMakeLists.txt  api_handlers.c  idf_component.yml  image_processor.c  web_files.c  web_server.c
idf/projects/esp32-s3/esp32s3_4g_camera/main/include/: camera_driver.h  image_processor.h  ml307r_driver.h  web_files.h
idf/projects/esp32-s3/ml307r_4g_hotspot_s3/: CMakeLists.txt  sdkconfig
idf/projects/esp32-s3/wifi_led_web_controller/: README.md  build_s3.sh  debug_s3.sh  sdkconfig
idf/projects/esp32/ml307r_4g_hotspot/: build.sh  sdkconfig  硬件连接图.md
microPython/: 代码上传指南.md
microPython/MPY相关/: DEMO示例.py
nodemcu/: README.md
platformio/: platformio.ini  烧写方式.md
platformio/src/: main.cpp
projects/esp32/: readme.md
projects/esp32-c3/ai_assistant/: build_ai_assistant.sh
projects/esp32-c3/ai_assistant/main/: CMakeLists.txt  ai_engine.h  idf_component.yml  main_original.c  voice_processor.c  web_interface.c  wifi_manager.c  wifi_manager.h
projects/esp32-c3/hello_world/: sdkconfig
projects/esp32-c3/led_blink/: CMakeLists.txt  README.md  sdkconfig
projects/esp32-c3/led_blink/main/: Kconfig.projbuild  led_blink_main.c
projects/esp32-c3/ml307r_4g_hotspot_c3/: CMakeLists.txt  HONEST_RECOMMENDATION.md  NAT_EXPLANATION.md  README.md  build_c3.sh  gpio_signal_test.c  uart_test_simple.c  wifi_nat_example.c
projects/esp32-c3/ml307r_4g_hotspot_c3/main/: simple_working.c
projects/esp32-c3/ml307r_4g_hotspot_c3/simple_uart_test/: CMakeLists.txt  sdkconfig  sdkconfig.old
projects/esp32-c3/nrf24l01_controller/: CMakeLists.txt  PROJECT_SUMMARY.md  build_nrf24l01.sh  sdkconfig.defaults  sdkconfig.old
projects/esp32-c3/nrf24l01_controller/main/: CMakeLists.txt  main.c  nrf24l01_config.c  nrf24l01_driver.c
projects/esp32-c3/servo_control/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
projects/esp32-c3/servo_control/main/: CMakeLists.txt  joystick_test.c  servo_control_main.c  servo_driver.c
projects/esp32-c3/wifi_led_web_controller/: AP_MODE_CHANGES.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  test_ap_debug.py
projects/esp32-c3/wifi_led_web_controller/main/: CMakeLists.txt  api_handlers.c  idf_component.yml  led_controller.c  main.c  web_files.c  web_files_new.c  web_server.c  wifi_manager.c
projects/esp32-c3/wifi_led_web_controller/main/include/: api_handlers.h  led_controller.h  web_files.h  web_server.h  wifi_manager.h
projects/esp32-c3/wifi_led_web_controller/web/: README.md  index.html  manifest.json  script.js  style.css  sw.js
projects/esp32-s3/: README.md  debug_pwa.html  sdkconfig  sdkconfig.defaults  sdkconfig.old  start_server.py  test_pwa_api.py
projects/esp32-s3/ai_assistant/: CMakeLists.txt  README.md  build_s3.sh  hardware_config.md  partitions.csv  sdkconfig.defaults
projects/esp32-s3/ai_assistant/main/: CMakeLists.txt  ai_engine.c  api_handlers.c  audio_processor.c  inmp441_config.h  main.c  max98357a_config.h  nlp_processor.c  voice_recognition.c  voice_synthesis.c  web_files.c  web_server.c  wifi_manager.c
projects/esp32-s3/ai_assistant/main/include/: ai_assistant.h  ai_engine.h  api_handlers.h  audio_processor.h  nlp_processor.h  voice_recognition.h  voice_synthesis.h  web_files.h  web_server.h  wifi_manager.h
projects/esp32-s3/breathing_led/: CMakeLists.txt  sdkconfig
projects/esp32-s3/breathing_led/main/: CMakeLists.txt  hello_world_main.c
projects/esp32-s3/esp32s3_4g_camera/: build_s3.sh  build_s3_dfu.sh  sdkconfig.defaults
projects/esp32-s3/hello_world/: sdkconfig
projects/esp32-s3/led_blink/: CMakeLists.txt  debug_connection.py  web_control.html
projects/esp32-s3/ml307r_4g_hotspot_s3/: README.md  build_s3.sh  build_s3_dfu.sh  sdkconfig.defaults
projects/esp32-s3/ml307r_4g_hotspot_s3/main/: CMakeLists.txt  api_handlers.c  main.c  web_server.c  wifi_manager.c
projects/esp32-s3/ml307r_4g_hotspot_s3/main/include/: web_server.h
projects/esp32-s3/web/: index.html  manifest.json  style.css
projects/esp32-s3/wifi_led_web_controller/: CMakeLists.txt  build_s3.sh  build_s3_dfu.sh  debug_guide.md
projects/esp32-s3/wifi_led_web_controller/main/: CMakeLists.txt  api_handlers.c  idf_component.yml  led_controller.c  main.c  web_files.c  web_server.c  wifi_manager.c
projects/esp32-s3/wifi_led_web_controller/main/include/: api_handlers.h  led_controller.h  web_files.h  web_server.h
projects/esp32/ml307r_4g_hotspot/: CMakeLists.txt  README.md  sdkconfig.defaults  快速开始.md
projects/esp8266/wifi_led_controller/: CMakeLists.txt
web/: README.md  index.html  package.json  script.js  server.js  server.py  start_server.bat  start_server.sh  styles.css
小智/面包板版本（小智ai）/: 抖音博主的主页名片进群看教程.txt
(+162 files in other folders)
