# Main component CMakeLists.txt for ESP32-S3 AI Assistant

idf_component_register(
    SRCS 
        "main.c"
        "wifi_manager.c"
        "ai_engine.c"
        "voice_recognition.c"
        "voice_synthesis.c"
        "web_server.c"
        "api_handlers.c"
        "web_files.c"
        "audio_processor.c"
        "nlp_processor.c"
    INCLUDE_DIRS 
        "."
        "include"
    REQUIRES 
        nvs_flash
        esp_wifi
        esp_event
        esp_http_server
        json
        driver
        esp_timer
        esp_netif
        lwip
        esp_system
        freertos
        log
        esp_common
        spi_flash
        esp_http_client
        fatfs
        spiffs
        esp_https_ota
        esp_tls
        mbedtls
        esp_adc
        esp_driver_i2s
        esp_driver_dac
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_uart
        esp_ringbuf
        esp_psram
        esp_mm
        esp_lcd
        esp_driver_cam
        esp_driver_isp
        esp_driver_jpeg
        esp_driver_ppa
        esp_driver_sdmmc
        esp_driver_sdspi
        esp_driver_sd_intf
        esp_driver_spi
        esp_driver_touch_sens
        esp_driver_tsens
        esp_driver_twai
        esp_driver_usb_serial_jtag
        esp_driver_ana_cmpr
        esp_driver_bitscrambler
        esp_driver_gptimer
        esp_driver_i2c
        esp_driver_ledc
        esp_driver_mcpwm
        esp_driver_parlio
        esp_driver_pcnt
        esp_driver_rmt
        esp_driver_sdm
        esp_driver_touch_sens
        esp_driver_tsens
        esp_driver_twai
        esp_driver_uart
        esp_driver_usb_serial_jtag
        esp_eth
        esp_event
        esp_gdbstub
        esp_hid
        esp_http_client
        esp_http_server
        esp_https_ota
        esp_https_server
        esp_hw_support
        esp_lcd
        esp_local_ctrl
        esp_mm
        esp_netif
        esp_netif_stack
        esp_partition
        esp_phy
        esp_pm
        esp_psram
        esp_ringbuf
        esp_rom
        esp_security
        esp_system
        esp_tee
        esp_timer
        esp_vfs_console
        esp_wifi
        esp-tls
        espcoredump
        esptool_py
        fatfs
        freertos
        hal
        heap
        http_parser
        idf_test
        ieee802154
        json
        linux
        log
        lwip
        mbedtls
        mqtt
        newlib
        nvs_flash
        nvs_sec_provider
        openthread
        partition_table
        perfmon
        protobuf-c
        protocomm
        pthread
        riscv
        rt
        sdmmc
        soc
        spi_flash
        spiffs
        tcp_transport
        touch_element
        ulp
        unity
        usb
        vfs
        wear_levelling
        wifi_provisioning
        wpa_supplicant
        xtensa
)

# 设置组件版本信息
set_property(TARGET ${COMPONENT_LIB} PROPERTY VERSION "1.0.0")

# 启用LWIP NAPT/NAT
target_compile_definitions(${COMPONENT_LIB} PRIVATE LWIP_NAPT=1 IP_FORWARD=1)

# AI相关编译定义
target_compile_definitions(${COMPONENT_LIB} PRIVATE 
    CONFIG_AI_ASSISTANT_ENABLED=1
    CONFIG_VOICE_RECOGNITION_ENABLED=1
    CONFIG_VOICE_SYNTHESIS_ENABLED=1
    CONFIG_NLP_PROCESSING_ENABLED=1
    CONFIG_AUDIO_PROCESSING_ENABLED=1
)
